# ambig-interp

./: .gitignore  README.md  ambignq_dataset_creation.ipynb  download_ambignq_dataset.ipynb  pyproject.toml  qwen.py  requirements.txt  tl_model.py  transformerlens.ipynb
datasets/: very_ambiguous_pairs.jsonl
scripts/: extract_activations.py  train_probes.py
src/: __init__.py  activations.py  model.py  utils.py
